--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,10 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.google.firebase:firebase-messaging:9.6.1'
+    apply plugin: 'com.google.gms.google-services'
     testCompile 'junit:junit:4.12'
 }
+
+
+apply plugin: 'com.google.gms.google-services'
