--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,10 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.code.gson:gson:2.2.4'
     apply plugin: 'com.google.gms.google-services'
     testCompile 'junit:junit:4.12'
 }
